Source/InWorldz.Phlox/grammar/generated/LSLParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from LSL.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;
using InWorldz.Phlox.Types;
using InWorldz.Phlox.Compiler;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class LSLParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, TYPE=44, ID=45, WS=46, 
		SEMI=47, LT=48, GT=49, MINUS=50, LPAREN=51, RPAREN=52, COMMENT_SINGLE=53, 
		COMMENT_BLOCK=54, STRING_LITERAL=55, INTEGER_LITERAL=56, FLOAT_LITERAL=57;
	public const int
		RULE_prog = 0, RULE_globalStmt = 1, RULE_stateDef = 2, RULE_stateBlock = 3, 
		RULE_stateBlockContent = 4, RULE_funcDef = 5, RULE_funcBlock = 6, RULE_statement = 7, 
		RULE_exprStatement = 8, RULE_label_ = 9, RULE_funcBlockContent = 10, RULE_lhs = 11, 
		RULE_funcCall = 12, RULE_eventDef = 13, RULE_paramList = 14, RULE_paramDecl = 15, 
		RULE_varDecl = 16, RULE_callParamList = 17, RULE_expression = 18, RULE_expr = 19, 
		RULE_assignmentExpression = 20, RULE_booleanExpression = 21, RULE_bitwiseExpression = 22, 
		RULE_equalityExpression = 23, RULE_relationalExpression = 24, RULE_binaryBitwiseExpression = 25, 
		RULE_additiveExpression = 26, RULE_multiplicativeExpression = 27, RULE_unaryExpression = 28, 
		RULE_typeCastExpression = 29, RULE_preIncDecExpression = 30, RULE_postfixExpression = 31, 
		RULE_primary = 32, RULE_vecLiteral = 33, RULE_rotLiteral = 34, RULE_listLiteral = 35, 
		RULE_listContents = 36;
	public static readonly string[] ruleNames = {
		"prog", "globalStmt", "stateDef", "stateBlock", "stateBlockContent", "funcDef", 
		"funcBlock", "statement", "exprStatement", "label_", "funcBlockContent", 
		"lhs", "funcCall", "eventDef", "paramList", "paramDecl", "varDecl", "callParamList", 
		"expression", "expr", "assignmentExpression", "booleanExpression", "bitwiseExpression", 
		"equalityExpression", "relationalExpression", "binaryBitwiseExpression", 
		"additiveExpression", "multiplicativeExpression", "unaryExpression", "typeCastExpression", 
		"preIncDecExpression", "postfixExpression", "primary", "vecLiteral", "rotLiteral", 
		"listLiteral", "listContents"
	};

	private static readonly string[] _LiteralNames = {
		null, "'state'", "'default'", "'{'", "'}'", "'@'", "'.'", "'='", "'+='", 
		"'-='", "'*='", "'/='", "'%='", "'<<='", "'>>='", "'if'", "'else'", "'while'", 
		"'for'", "'do'", "'++'", "'--'", "'return'", "'jump'", "','", "'||'", 
		"'&&'", "'|'", "'&'", "'^'", "'!='", "'=='", "'<='", "'>='", "'<<'", "'>>'", 
		"'+'", "'*'", "'/'", "'%'", "'!'", "'~'", "'['", "']'", null, null, null, 
		"';'", "'<'", "'>'", "'-'", "'('", "')'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, "TYPE", "ID", "WS", "SEMI", 
		"LT", "GT", "MINUS", "LPAREN", "RPAREN", "COMMENT_SINGLE", "COMMENT_BLOCK", 
		"STRING_LITERAL", "INTEGER_LITERAL", "FLOAT_LITERAL"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "LSL.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static LSLParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public LSLParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public LSLParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(LSLParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public GlobalStmtContext[] globalStmt() {
			return GetRuleContexts<GlobalStmtContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public GlobalStmtContext globalStmt(int i) {
			return GetRuleContext<GlobalStmtContext>(i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_prog; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILSLParseTreeListener typedListener = listener as ILSLParseTreeListener;
			if (typedListener != null) typedListener.EnterProg(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILSLParseTreeListener typedListener = listener as ILSLParseTreeListener;
			if (typedListener != null) typedListener.ExitProg(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILSLVisitor<TResult> typedVisitor = visitor as ILSLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProg(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgContext prog() {
		ProgContext _localctx = new ProgContext(Context, State);
		EnterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 75;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 74;
				globalStmt();
				}
				}
				State = 77;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 52776558133254L) != 0) );
			State = 79;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class GlobalStmtContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public VarDeclContext varDecl() {
			return GetRuleContext<VarDeclContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FuncDefContext funcDef() {
			return GetRuleContext<FuncDefContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StateDefContext stateDef() {
			return GetRuleContext<StateDefContext>(0);
		}
		public GlobalStmtContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_globalStmt; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILSLParseTreeListener typedListener = listener as ILSLParseTreeListener;
			if (typedListener != null) typedListener.EnterGlobalStmt(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILSLParseTreeListener typedListener = listener as ILSLParseTreeListener;
			if (typedListener != null) typedListener.ExitGlobalStmt(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILSLVisitor<TResult> typedVisitor = visitor as ILSLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitGlobalStmt(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public GlobalStmtContext globalStmt() {
		GlobalStmtContext _localctx = new GlobalStmtContext(Context, State);
		EnterRule(_localctx, 2, RULE_globalStmt);
		try {
			State = 84;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 81;
				varDecl();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 82;
				funcDef();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 83;
				stateDef();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StateDefContext : ParserRuleContext {
		public StateDefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stateDef; } }
	 
		public StateDefContext() { }
		public virtual void CopyFrom(StateDefContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class NamedStateDefContext : StateDefContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(LSLParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public StateBlockContext stateBlock() {
			return GetRuleContext<StateBlockContext>(0);
		}
		public NamedStateDefContext(StateDefContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILSLParseTreeListener typedListener = listener as ILSLParseTreeListener;
			if (typedListener != null) typedListener.EnterNamedStateDef(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILSLParseTreeListener typedListener = listener as ILSLParseTreeListener;
			if (typedListener != null) typedListener.ExitNamedStateDef(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILSLVisitor<TResult> typedVisitor = visitor as ILSLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNamedStateDef(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class DefaultStateDefContext : StateDefContext {
		[System.Diagnostics.DebuggerNonUserCode] public StateBlockContext stateBlock() {
			return GetRuleContext<StateBlockContext>(0);
		}
		public DefaultStateDefContext(StateDefContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILSLParseTreeListener typedListener = listener as ILSLParseTreeListener;
			if (typedListener != null) typedListener.EnterDefaultStateDef(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILSLParseTreeListener typedListener = listener as ILSLParseTreeListener;
			if (typedListener != null) typedListener.ExitDefaultStateDef(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILSLVisitor<TResult> typedVisitor = visitor as ILSLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDefaultStateDef(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StateDefContext stateDef() {
		StateDefContext _localctx = new StateDefContext(Context, State);
		EnterRule(_localctx, 4, RULE_stateDef);
		try {
			State = 91;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__0:
				_localctx = new NamedStateDefContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 86;
				Match(T__0);
				State = 87;
				Match(ID);
				State = 88;
				stateBlock();
				}
				break;
			case T__1:
				_localctx = new DefaultStateDefContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 89;
				Match(T__1);
				State = 90;
				stateBlock();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StateBlockContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public StateBlockContentContext[] stateBlockContent() {
			return GetRuleContexts<StateBlockContentContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StateBlockContentContext stateBlockContent(int i) {
			return GetRuleContext<StateBlockContentContext>(i);
		}
		public StateBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stateBlock; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILSLParseTreeListener typedListener = listener as ILSLParseTreeListener;
			if (typedListener != null) typedListener.EnterStateBlock(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILSLParseTreeListener typedListener = listener as ILSLParseTreeListener;
			if (typedListener != null) typedListener.ExitStateBlock(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILSLVisitor<TResult> typedVisitor = visitor as ILSLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStateBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StateBlockContext stateBlock() {
		StateBlockContext _localctx = new StateBlockContext(Context, State);
		EnterRule(_localctx, 6, RULE_stateBlock);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 93;
			Match(T__2);
			State = 97;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==ID) {
				{
				{
				State = 94;
				stateBlockContent();
				}
				}
				State = 99;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 100;
			Match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StateBlockContentContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public EventDefContext eventDef() {
			return GetRuleContext<EventDefContext>(0);
		}
		public StateBlockContentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stateBlockContent; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILSLParseTreeListener typedListener = listener as ILSLParseTreeListener;
			if (typedListener != null) typedListener.EnterStateBlockContent(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILSLParseTreeListener typedListener = listener as ILSLParseTreeListener;
			if (typedListener != null) typedListener.ExitStateBlockContent(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILSLVisitor<TResult> typedVisitor = visitor as ILSLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStateBlockContent(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StateBlockContentContext stateBlockContent() {
		StateBlockContentContext _localctx = new StateBlockContentContext(Context, State);
		EnterRule(_localctx, 8, RULE_stateBlockContent);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 102;
			eventDef();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FuncDefContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(LSLParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAREN() { return GetToken(LSLParser.LPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAREN() { return GetToken(LSLParser.RPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public FuncBlockContext funcBlock() {
			return GetRuleContext<FuncBlockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TYPE() { return GetToken(LSLParser.TYPE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ParamListContext paramList() {
			return GetRuleContext<ParamListContext>(0);
		}
		public FuncDefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_funcDef; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILSLParseTreeListener typedListener = listener as ILSLParseTreeListener;
			if (typedListener != null) typedListener.EnterFuncDef(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILSLParseTreeListener typedListener = listener as ILSLParseTreeListener;
			if (typedListener != null) typedListener.ExitFuncDef(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILSLVisitor<TResult> typedVisitor = visitor as ILSLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFuncDef(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FuncDefContext funcDef() {
		FuncDefContext _localctx = new FuncDefContext(Context, State);
		EnterRule(_localctx, 10, RULE_funcDef);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 105;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==TYPE) {
				{
				State = 104;
				Match(TYPE);
				}
			}

			State = 107;
			Match(ID);
			State = 108;
			Match(LPAREN);
			State = 110;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==TYPE) {
				{
				State = 109;
				paramList();
				}
			}

			State = 112;
			Match(RPAREN);
			State = 113;
			funcBlock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FuncBlockContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public FuncBlockContentContext[] funcBlockContent() {
			return GetRuleContexts<FuncBlockContentContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public FuncBlockContentContext funcBlockContent(int i) {
			return GetRuleContext<FuncBlockContentContext>(i);
		}
		public FuncBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_funcBlock; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILSLParseTreeListener typedListener = listener as ILSLParseTreeListener;
			if (typedListener != null) typedListener.EnterFuncBlock(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILSLParseTreeListener typedListener = listener as ILSLParseTreeListener;
			if (typedListener != null) typedListener.ExitFuncBlock(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILSLVisitor<TResult> typedVisitor = visitor as ILSLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFuncBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FuncBlockContext funcBlock() {
		FuncBlockContext _localctx = new FuncBlockContext(Context, State);
		EnterRule(_localctx, 12, RULE_funcBlock);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 115;
			Match(T__2);
			State = 119;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2445313876852778L) != 0)) {
				{
				{
				State = 116;
				funcBlockContent();
				}
				}
				State = 121;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 122;
			Match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public FuncBlockContext funcBlock() {
			return GetRuleContext<FuncBlockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FuncBlockContentContext funcBlockContent() {
			return GetRuleContext<FuncBlockContentContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILSLParseTreeListener typedListener = listener as ILSLParseTreeListener;
			if (typedListener != null) typedListener.EnterStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILSLParseTreeListener typedListener = listener as ILSLParseTreeListener;
			if (typedListener != null) typedListener.ExitStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILSLVisitor<TResult> typedVisitor = visitor as ILSLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 14, RULE_statement);
		try {
			State = 126;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,7,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 124;
				funcBlock();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 125;
				funcBlockContent();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
